--- a/MicroservicesArtuchecture.Services.CouponAPI/appsettings.json
+++ b/MicroservicesArtuchecture.Services.CouponAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings":{
-    "DefaultConnection" : ""
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=CouponDatabase;Trusted_Connection=True;TrustServerCertificate=true"
   }
 }
