--- a/MicroservicesArtuchecture.Services.CouponAPI/MicroservicesArtuchecture.Services.CouponAPI.csproj
+++ b/MicroservicesArtuchecture.Services.CouponAPI/MicroservicesArtuchecture.Services.CouponAPI.csproj
@@ -5,6 +5,7 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
+    <RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
