implement service Authentication

--- a/MicroservicesArtuchecture.AuthApi/appsettings.json
+++ b/MicroservicesArtuchecture.AuthApi/appsettings.json
@@ -9,4 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=AuthenticationDatabase;Trusted_Connection=True;TrustServerCertificate=true"
   }
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "This is Used to Sign ",
+      "Issure": "auth-api",
+      "Audience" : "auth-client"
+    }
+  }
 }
